--- a/Spotify New/01-intro.Rmd
+++ b/Spotify New/01-intro.Rmd
@@ -13,7 +13,7 @@ It might happen that questions come up or that you don’t know how to solve a t
  
 ## What is this Project About?
  
-Last semester, we dealt with the COVID-19 outbreak, but to take your mind off things, we thought it would be a good idea to focus on a different topic this semester: the business model of Airbnb. More precisely, we are analyzing part of a very detailed data set of all Airbnb offers in Berlin. The data was scraped in November 2018, which means it was taken directly from the Airbnb website itself. You will find all kinds of information in the data set - useful and useless ones.
+Last semester, we dealt with the business model of Airbnb. This semester, we will have a look at Spotify data! More precisely, we are analyzing a very detailed Spotify data set after which you will get the chance to look at your own Spotify data. You will find all kinds of information in the data sets - useful and useless ones.
 
 
 Are you already curious to see for yourself? In analogy to the typical Data Science workflow, we split this project into two parts. First you are going to learn how to perform an Exploratory Data Analysis (EDA). You will have a closer look at the data, transform it and then get to know the different variables and what they look like in different types of visualizations. Beginners will have completed the project after this, but it will be beneficial to also try and work on the next part: In the second part of the project you will come up with a model that predicts Airbnb prices in Berlin as accurately as possible. You are going to start with a linear regression model, which you can modify as you please and then you can explore all the other possibilities of modeling and predicting data. 
