--- a/Spotify New/index.Rmd
+++ b/Spotify New/index.Rmd
@@ -65,10 +65,10 @@ knitr::write_bib(c(
 In the first few chapters you will be introduced to the basics of the `R` and `Python` tracks respectively and you will find helpful explanations to questions you might have in the beginning of your coding journey. There will be a quick introduction to the Data Science track so that you can get started with the project quickly. So let's get started with the basics!	
 
 In all tracks you will work on your project in small groups of fellow students. This not only helps you get the project done faster, it also helps make your results even better. Our experience shows: The different backgrounds of the members and discussing different opinions and ideas will produce the best results. Besides, it is of course more fun to work on a project together than to code alone!			
-The groups can consist of a maximum of three members. You can choose your two teammates independently, we won’t interfere with your arrangements. It is important that all group members  complete the same level of difficulty (beginner or advanced), since the tasks are different in scope for each level. We explicitly  encourage you to collaborate with students from different departments. This not only allows you to get to know people from other departments, but may even give you a whole new perspective on the project and tasks.	
-When submitting it is important to note: for a certificate, each person must submit the project individually. However, this can be identical within your group. You can get more information at our first Coding Meetup on **May x, 2021**.			
+The groups can consist of a maximum of four members. You can choose your teammates independently, we won’t interfere with your arrangements. It is important that all group members  complete the same level of difficulty (beginner or advanced), since the tasks are different in scope for each level. We explicitly  encourage you to collaborate with students from different departments. This not only allows you to get to know people from other departments, but may even give you a whole new perspective on the project and tasks.	
+When submitting it is important to note: for a certificate, each person must submit the project individually. However, this can be identical within your group. You can get more information at our first Coding Meetup on **May 19, 2021**.			
 
-This Spotify case study and the associated project guide was developed and written entirely from scratch by TechAcademy's Data Science team. Karlo Lukic developed the project in `R`, while Felix Schneider and Manuel Mair am Tinkhof developed it in `Python`.
+This Spotify case study and the associated project guide was developed and written entirely from scratch by TechAcademy's Data Science team. Karlo Lukic and Lara Zaremba developed the project in `R`, while Felix Schneider and Manuel Mair am Tinkhof developed it in `Python`.
 
 # What's Data Science and How Do I Do It?
 Data science is a multi-layered field in which the use of the latest machine learning methods is only a sub-area. To get there, you'll need many steps before -- from collecting to manipulating to exploring the data. And eventually, you will need to somehow communicate your findings.
@@ -228,7 +228,7 @@ Further Explanations:
 ### Coding Meetups and Requirements
 
 Now that you have learned the theoretical foundation in the DataCamp courses, you can put your skills into practice. We have put together a project for you based on real data sets. You can read about the details in the following chapters of this project guide.						
-Of course, we will also go into more detail about the project and the tools that go with it. We will discuss everything you need to know during the first Coding Meetup, which will take place on **May x, 2021**. After that, the work on the project will officially begin.
+Of course, we will also go into more detail about the project and the tools that go with it. We will discuss everything you need to know during the first Coding Meetup, which will take place on **May 19, 2021**. After that, the work on the project will officially begin.
 You can find the exact project tasks together with further explanations and hints in the following chapters.
 
 To receive the certificate, it is essential that you have solved at least two thirds of the “Exploratory Data Analysis” part of the project. For the advanced participants, the entire "Price Prediction -- The Application of Statistical Models" part is added. In addition, two thirds of the respective curriculum on DataCamp must be completed. You can find more detailed information on this in the "Curriculum" section of the respective programming language above.
