--- a/Spotify New/04-checklist.Rmd
+++ b/Spotify New/04-checklist.Rmd
@@ -5,82 +5,70 @@ This checklist should help you keeping track of your exercises. Remember that yo
 
 **Part A: Exploratory Data Analysis (Beginners + Advanced)**
 
+**Data: Kaggle Data**
 
-1. Visualize the available apartments (calendar dataset):
+1. **Getting Started** 
 
+1.1 Read in data, show data, give summary of data (mean, count,...)
 
-    a. Transform t/f to boolean values True/False
+1.2 Compute column "duration_minutes" from "duration_ms"
 
+1.3 Compute mean/std of duration_minutes, which song has the longest duration?
 
-    b. Aggregate data after dates
-
-
-    c. Plot available apartments over time
-
-
-2. Visualize the listings dataset
+1.4 Plot histogram of song durations
 
 
-    a. Clean and transform the `price` and `cleaning_fee` columns to numeric values
+2. **Time Series: How did songs change over the years?**
+
+2.1 Streaming leads to shorter songs? Group-By: song duration over years
+
+2.2 Merge songs with song_features on id
+
+2.3 Compare how features like 'acousticness', 'danceability', 'energy', 'instrumentalness' changed over time
+
+2.4 For Advanced: Radial plot over time
+
+3. **Artists**
+
+3.1 Bar Plot with artists with most songs
+
+3.2 TODO: Map & merge
+
+4. **Pairplot: Artist Comparison**
+
+4.1 Look for three different artists and compare the features of the songs with a pairplot
+
+4.2 Go on https://seaborn.pydata.org/examples/index.html# , look for a plot which could be used to visualize an aspect of the spotfiy data and generate a plot
+
+4.3 What is the message of your plot? What does it show?
 
 
-    b. Compute mean and standard deviation of apartment prices for each neighborhood
+**Data: Personal Spotify Data**
+
+5. **Personal Data**
+
+5.1 Generate Bar Plot with top 10 artists
+
+5.2 Visualize when you listened to music. On which days, to which times?
 
 
-    c. Visualize the price distribution for the most and least expensive district
+**Part B: Popularity Prediction Using Statistical Methods ((motivated) Beginners + Advanced)**
 
 
-    d. Visualize if `cleaning_fee` was used to hide costs
+**Data: Kaggle Data**
 
+1. Create correlation plot between features
 
-3. Merging of `listings` and `review` data set
+2. Regression 
 
+2.1 Create simple linear model to predict popularity of song
 
-    a. Aggregate reviews by `ID`
+2.2 Improve your model using more features
 
+3. Train/ Test your model 
 
-    b. Merge `listings` and aggregated reviews data
+4. Develop more advanced models
 
-
-    c. Filter and plot amount of apartments in each district
-
-
-4. Visualize apartments on map
-
-
-    a. Draw a circle for every available apartment on map
-
-
-    b. Colorize each circle according to its districts
-
-
-    c. Draw a 2D-density plot
-
-
-**Part B: Price Prediction Using Statistical Methods ((motivated) Beginners + Advanced)**
-
-1. Visualize feature correlations in a correlation matrix/heatmap
-
-
-2. Regression
-
-
-    a. Simple regression model using one variable
-
-
-    b. Improve your model using more features
-
-
-3. Test your model
-
-
-    a. Use test data set to predict prices of the apartments
-
-
-    b. Compare your predictions with the true values
-
-
-    c. Train a new model using a more advanced method, send us your model and the predictions of your best model
 
 
 
