--- a/Spotify.tex
+++ b/Spotify.tex
@@ -856,9 +856,11 @@ The goal should be to create a map with a hover effect displaying each country's
 
 \begin{tips}r
 
-Use \href{https://jkunst.com/highcharter/}{\{highcharter\}} to create a simple interactive map. Check \href{https://jkunst.com/highcharter/articles/maps.html}{this documentation} if you'd like to do that. In the case of \{highcharter\}, you do not need any additional data as the package relies on \texttt{ISO\ Alpha\ 2} (two-letter) country codes supplied in the data set.
+First, load the data set \texttt{weekly\_charts.csv} and find each country's top song. You could use the familiar \{dplyr\} verbs for this part. You could also save the resulting data set for plotting.
 
-Alternatively, use \{plotly\} to create an interactive map. In this case, you have more customization options, but you need to add \texttt{ISO\ Alpha\ 3} (three-letter) country codes to your data set. You can load \href{https://github.com/lukes/ISO-3166-Countries-with-Regional-Codes/blob/master/all/all.csv}{this CSV file} via URL to merge it with your data set. Then, create a plot using \{plotly\} as described \href{https://plotly.com/r/choropleth-maps/}{here}.
+Then, use \href{https://jkunst.com/highcharter/}{\{highcharter\}} to create a simple interactive map. Check \href{https://jkunst.com/highcharter/articles/maps.html}{this documentation} if you'd like to do that. In the case of \{highcharter\}, you do not need any additional data as the package relies on \texttt{ISO\ Alpha\ 2} (two-letter) country codes supplied in the \texttt{country} column of the \texttt{weekly\_charts.csv} data set. Make use of \{highcharter\}'s \texttt{hc\_tooltip()} function and its \texttt{pointFormat} argument for a mouse hover effect.
+
+Alternatively, use \{plotly\} to create an interactive map. In this case, you have more customization options, but you need to add \texttt{ISO\ Alpha\ 3} (three-letter) country codes to the \texttt{weekly\_charts.csv} data set. You can load \href{https://github.com/lukes/ISO-3166-Countries-with-Regional-Codes/blob/master/all/all.csv}{this CSV file} via URL to merge \texttt{ISO\ Alpha\ 3} country codes with countries in the \texttt{weekly\_charts.csv} data set. Then, create a plot using \{plotly\} as described \href{https://plotly.com/r/choropleth-maps/}{here}.
 
 \end{tips}
 
