--- a/Spotify New/04-checklist.Rmd
+++ b/Spotify New/04-checklist.Rmd
@@ -1,7 +1,7 @@
 \newpage
 # Excercise Checklist
 
-This checklist should help you keeping track of your exercises. Remember that you have to hand in satisfactory solutions to at least two thirds of the exercises. If you're part of the beginner track this refers to two thirds of part A (EDA) only. If you're part of the advanced track, you have to hand in at least two thirds of both individual parts A and B. Hence, you cannot hand in 100 percent of the first part and only 50 percent of the second one. You'll need more than 66% in each one for a certificate. After all, you're not really that advanced if you only did half of it, right?
+This checklist should help you keeping track of your exercises. Remember that you have to hand in satisfactory solutions to at least two-thirds of the assignments. If you're part of the beginner track, this refers to two-thirds of part A (EDA) only. If you're part of the advanced track, you have to hand in at least two-thirds of both individual parts A and B. Hence, you cannot hand in 100 percent of the first and only 50 percent of the second one. You'll need more than 66% in each one for a certificate. After all, you're not that advanced if you only did half of it, right? :)
 
 **Part A: Exploratory Data Analysis (Beginners + Advanced)**
 
@@ -9,11 +9,11 @@ This checklist should help you keeping track of your exercises. Remember that yo
 
 1. **Getting Started** 
 
-1.1 Read in data, show data, give summary of data (mean, count,...)
+1.1 Read in data, show data, and summarize data (mean, count, ...)
 
-1.2 Compute column "duration_minutes" from "duration_ms"
+1.2 Compute column `duration_minutes` from `duration_ms`
 
-1.3 Compute mean/std of duration_minutes, which song has the longest duration?
+1.3 Compute mean/std of `duration_minutes`. Which song has the longest duration?
 
 1.4 Plot histogram of song durations
 
@@ -24,13 +24,13 @@ This checklist should help you keeping track of your exercises. Remember that yo
 
 2.2 Merge songs with song_features on id
 
-2.3 Compare how features like 'acousticness', 'danceability', 'energy', 'instrumentalness' changed over time
+2.3 Compare how features like `acousticness`, `danceability`, `energy`, `valence`, `speechiness`, and `instrumentalness` changed over time
 
-2.4 For Advanced: Radial plot over time
+2.4 For Advanced: Radar plot (aka spider plot or polar plot) over time
 
 3. **Artists**
 
-3.1 Bar Plot with artists with most songs
+3.1 Bar plot with artists with most songs
 
 3.2 Map with top songs in each country
 
@@ -38,7 +38,7 @@ This checklist should help you keeping track of your exercises. Remember that yo
 
 4.1 Look for three different artists and compare the features of the songs with a pairplot
 
-4.2 Look at the proposed galary and look for a plot which could be used to visualize an aspect of the spotfiy data and generate a plot
+4.2 Look at the proposed gallery and look for a plot that you could use to visualize an aspect of the Spotify data and generate a plot
 
 4.3 What is the message of your plot? What does it show?
 
@@ -47,9 +47,9 @@ This checklist should help you keeping track of your exercises. Remember that yo
 
 5. **Personal Data**
 
-5.1 Generate Bar Plot with top 10 artists
+5.1 Generate a bar plot with top 10 artists
 
-5.2 Visualize when you listened to music. On which days, to which times?
+5.2 Visualize when you listened to music. On which days, at which times?
 
 
 **Part B: Popularity Prediction Using Statistical Methods ((motivated) Beginners + Advanced)**
@@ -57,19 +57,14 @@ This checklist should help you keeping track of your exercises. Remember that yo
 
 **Data: Kaggle Data**
 
-1. Create correlation plot between features
+1. Create a correlation plot between features
 
 2. Regression 
 
-2.1 Create simple linear model to predict popularity of song
+2.1 Create a simple linear model to predict the popularity of a song
 
 2.2 Improve your model using more features
 
-3. Train/ Test your model 
+3. Train/test your model 
 
 4. Develop more advanced models
-
-
-
-
-
