changed charts to advanced

--- a/Spotify New/02-EDA.Rmd
+++ b/Spotify New/02-EDA.Rmd
@@ -314,7 +314,7 @@ knitr::include_graphics("splots/artists_bar_chart.png")
 ```
 
 
-### Charts 
+### Charts (Advanced)
 
 
 Care to discover new songs?
