--- a/Spotify New/03-prediction.Rmd
+++ b/Spotify New/03-prediction.Rmd
@@ -119,9 +119,10 @@ You have now created a vector with all popularity predictions for the test data 
  
 In order to use a uniform comparison metric, please use the following function to measure your prediction accuracy:
  
-``` # Function that returns Root Mean Squared Error while ignoring NAs
-rmse <- function(actual, predicted) {
-sqrt(mean((predicted - actual)^2, na.rm = TRUE)) ```
+``` # Function that returns Root Mean Squared Error while ignoring NAs```
+
+```rmse <- function(actual, predicted) {
+sqrt(mean((predicted - actual)^2, na.rm = TRUE))}```
 
 After training, import the data from the `test.csv` file, define both variables `X_test` and `y_test`, and create a vector with price predictions applying `predict(X_test)` on your model. Store your prediction in the variable `predicted_popularity`.
 ::::
