Changed Links Beginner Python
Changed links ad two courses were not available anymore.

--- a/Spotify New/index.Rmd
+++ b/Spotify New/index.Rmd
@@ -175,8 +175,8 @@ Both beginners and advanced learners must have completed at least two thirds of 
 - [Intermediate Python (4h)](https://www.datacamp.com/courses/intermediate-python-for-data-science)
 - [Python for Data Science Toolbox (Part 1) (3h)](https://www.datacamp.com/courses/python-data-science-toolbox-part-1)
 - [Introduction to Data Visualization with Matplotlib (4h)](https://www.datacamp.com/courses/introduction-to-matplotlib)
-- [Manipulating DataFrames with pandas (4h)](https://www.datacamp.com/courses/manipulating-dataframes-with-pandas)
-- [Merging DataFrames with pandas (4h)](https://www.datacamp.com/courses/merging-dataframes-with-pandas)
+- [Data Manipulation with pandas (4h)](https://learn.datacamp.com/courses/data-manipulation-with-pandas)
+- [Joining Data with pandas (4h)](https://learn.datacamp.com/courses/joining-data-with-pandas)
 - [Exploratory Data Analysis in Phyton (4h)](https://www.datacamp.com/courses/exploratory-data-analysis-in-python)
 - [Introduction to DataCamp Projects (2h)](https://www.datacamp.com/projects/33)
 - [Introduction to Linear Modeling in Python (4h)](https://www.datacamp.com/courses/introduction-to-linear-modeling-in-python)
