lowercase json in `import json`

--- a/Spotify New/02-EDA.Rmd
+++ b/Spotify New/02-EDA.Rmd
@@ -341,7 +341,7 @@ m
 Folium requires you to specify each country’s country border coordinates you like to be drawn (i.e., colored, like in our example map). For this, we prepared a JSON file with all that data. Note that this is not a CSV file; hence you can’t use the pandas `.read_csv()` method. You’ll need to work with two new libraries for importing the data - one for requesting the data from a web server (i.e., Google Drive) and one to parse (i.e., read) the data. Here’s the code:
 ```
 import requests
-import JSON
+import json
 
 # request data from a url
 response = requests.get(“https://tinyurl.com/TechAcademy-GeoData”)
